
Changelog:
==========

v1.02

- New features

Auto-updater, default configuration, cleanups and windows/linux build scripts (thanks to Tim Cox)
Parsing cache and media library
Playlists (m3u/pls) support
Preliminary album art support, better audio (flac) and tags parsing
New options for video resolution, deinterlace filter, and archives browsing
Better video settings with virtual PS3 menu (A/V sync, deinterlace, ...)

- Fixes

A/V out of sync issues with some ISOs and medias / codecs support improvment
External subtitles not always loaded
Regression since 0.98, server would not start on some machines
Newest builds of ffmpeg/mplayer for win32
Small fixes

v1.01:

- New features

Mac OSX version !! (thanks to Robin Mulder)
Audio High Fidelity engine: 24bits/96kHz/5.1 FLAC support (HDMI receiver mandatory)
French localization
Audio/Subtitles priority settings (same as Haali Media Splitter)
Truetype font setting, with some new codepages, for asian subtitles

- Fixes:

m4a and aac are now transcoded by default (iTunes Apple Lossless compatibility)
seeking issues with dvr-ms and tsMuxer with AC3/PCM mode
Displayed aspect ratio preserved


v1.00:

- New Features

GPL licensing :)
IDX/SUB support for AviSynth ONLY
Revamped some UI, especially transcoding settings
First attempt to make an LPCM or AC3 automatic conversion with tsMuxer (seeking isn't working well and demuxed audio delays are not managed)
AviSynth script is now really fully customizable

- Fixes

VIDEO_TS folders are now case insensitive
Yet another flac parsing bug
Sync issues management for xvid/mp3
.ass subtitles files support
UUID random generation, it's now possible to launch multiple servers on one network.
Added wmv binary codecs in Windows package for smooth WMV-HD transcoding  
Rare and random video glitch due to another seeking bug


v0.99:

- New features:

DVD ISOs images / VIDEO_TS Folder transcoder
DVR-MS support (need feedback)
Better subtitles configuration